app/scss/layout/_typography.scss
$typography--color: #212121;
$typography__headers--color: #000;
$typography__selection--color: #cccccc;

::selection {
  background: rgba($typography__selection--color, .45);
}

::-moz-selection {
  background: rgba($typography__selection--color, .45);
}

body {
  @include rem(font-size, 11px);

  font-family: 'Average', serif;
  font-weight: 400;
  text-rendering: geometricPrecision;
  color: $typography--color;
  letter-spacing: .1px;
}

small {
  @include rem(margin, 0 4px);
  @include rem(font-size, 15px);
  @include rem(line-height, 10px);
}

h1,
h2 {
  color: $typography__headers--color;
}

h1 {
  @include rem(font-size, 26px);
  @include rem(line-height, 18px);

  font-weight: 700;
}

h2 {
  @include rem(font-size, 16px);

  font-weight: 700;
}

h3 {
  @include rem(font-size, 14px);
}

h4 {
  @include rem(font-size, 14px);
  @include rem(line-height, 14px);
}

